trabajando en el footer

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <!-- endbuild -->
     
   </head>
@@ -53,7 +54,7 @@
         </div>
       </div>
 
-      <div class="footer">
+      <div id="footer">
       </div>
     </div>
     
