avanzando el footer

--- a/app/index.html
+++ b/app/index.html
@@ -47,10 +47,10 @@
           <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
         </div>
       </div>
-
-      <div id="footer">
-      </div>
     </div>
+
+    <footer id="footer" class="footer">
+    </footer>
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
