--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
     <!-- endbuild -->
     
@@ -35,8 +36,11 @@
         <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
       </div>
 
-      <div class="row marketing">
-        <div class="col-lg-6">
+
+      <div class="row">
+        <div class="col-xs-4">
+        </div>
+        <div class="col-xs-4">
           <h4>HTML5 Boilerplate</h4>
           <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
           
@@ -46,6 +50,8 @@
           <h4>Bootstrap</h4>
           <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
         </div>
+
+        <div id="contact" class="col-xs-4"></div>
       </div>
 
       <div id="footer">
