--- a/app/index.html
+++ b/app/index.html
@@ -28,14 +28,41 @@
     <![endif]-->
     
     <div id="header"></div>
-    <div class="container">
-      <div class="jumbotron">
-        <h1>'Allo, 'Allo!</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
-        <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active" style="background-color: red;">
+          <img src="..." alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        <div class="item" style="background-color: green;">
+          <img src="..." alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        <div class="item" style="background-color: blue;">
+          <img src="..." alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+      <!-- Indicators -->
       </div>
 
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+    </div>
 
+
+    <div class="container">
+      <h1>Audio &amp; Video Systems</h1>
       <div class="row">
         <div class="col-xs-4">
         </div>
