cambiar de vista al hacer clic en indicadores de carrusel

--- a/app/automation.html
+++ b/app/automation.html
@@ -28,7 +28,7 @@
     <![endif]-->
     
     <div id="header"></div>
-    <div id="carousel"></div>
+    <div id="carousel" class="carousel-automation"></div>
     <div class="container">
       <h1>Automation</h1>
       <div id="contact" class="contact-automation col-xs-4"></div>
