--- a/app/it-services-and-support.html
+++ b/app/it-services-and-support.html
@@ -28,7 +28,7 @@
     <![endif]-->
     
     <div id="header"></div>
-    <div id="carousel"></div>
+    <div id="carousel" class="carousel-it"></div>
     <div class="container">
       <h1>IT Service &amp; Support</h1>
       <div id="contact" class="contact-it col-xs-4"></div>
