--- a/app/surveillance-cameras.html
+++ b/app/surveillance-cameras.html
@@ -28,7 +28,7 @@
     <![endif]-->
     
     <div id="header"></div>
-    <div id="carousel"></div>
+    <div id="carousel" class="carousel-surveillance"></div>
     <div class="container">
       <h1>Surveillance Cameras</h1>
       <div id="contact" class="contact-surveillance col-xs-4"></div>
