--- a/app/audio-and-video.html
+++ b/app/audio-and-video.html
@@ -28,7 +28,7 @@
     <![endif]-->
     
     <div id="header"></div>
-    <div id="carousel"></div>
+    <div id="carousel" class="carousel-audio"></div>
     
     <div class="container">
       <h1>Audio &amp; Video</h1>
