--- a/app/networking.html
+++ b/app/networking.html
@@ -28,7 +28,7 @@
     <![endif]-->
     
     <div id="header"></div>
-    <div id="carousel"></div>
+    <div id="carousel" class="carousel-networking"></div>
     <div class="container">
       <h1>Networking</h1>
       <div id="contact" class="contact-networking col-xs-4"></div>
