--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
     
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="scripts/translations.js"></script>
     <!-- endbuild -->
   </body>
 </html>
