--- a/app/networking.html
+++ b/app/networking.html
@@ -31,7 +31,13 @@
     <div id="carousel" class="carousel-networking"></div>
     <div class="container">
       <h1>Networking</h1>
-      <div id="contact" class="contact-networking col-xs-4"></div>
+      <div class="row">
+          <p id="networking-desc">Among our main solutions we offer analysis, logistics and implementation of Local Area Networks (LAN), wireless networks (Wireless) and the infrastructure to configure Virtual Private Networks (VPN) in businesses and homes. We install all types of networks, Wired (UTP, fiber) or wireless (WI-FI).</p>
+      </div>
+      <div class="row">
+          <div class="col-xs-8"></div>
+          <div id="contact" class="contact-networking col-xs-4"></div>
+      </div>
     </div>
     <footer id="footer" class="footer"></footer>
 
@@ -58,6 +64,7 @@
     
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="scripts/translations.js"></script>
     <!-- endbuild -->
   </body>
 </html>
