--- a/app/automation.html
+++ b/app/automation.html
@@ -31,7 +31,24 @@
     <div id="carousel" class="carousel-automation"></div>
     <div class="container">
       <h1>Automation</h1>
-      <div id="contact" class="contact-automation col-xs-4"></div>
+      <div class="row">
+          <p id="automation-desc-p1">We develop, distribute, install and integrate products and services focused on smart homes, office automation, shops, office buildings, hotels, hospitals, etc. Automatic adjustment of lighting scenes, temperature (for floor, spaces and pools) and water levels (tanks, swimming pools, spas) from your smartphone and / or device of choice.</p>
+      </div>
+      <div class="row">
+          <div class="col-xs-4">
+              <h2 id="automation-desc-p2-tb">¿What is a Smart Home?</h2>
+              <p id="automation-desc-p2">A Smart Home automatically adjusts security, lighting, heating, air conditioning, cameras, blinds, irrigation systems , audio and video , for comfort, convenience and energy savings.</p>
+              <p id="automation-desc-p3">An installation may include some or all of the above systems or even more, depending on the needs and tastes. These integrated systems work and function as one. The house gradually increases its value, safety and efficiency.</p>
+          </div>
+          <div class="col-xs-4">
+              <p id="automation-desc-p4">A Smart Home can help us reduce energy spending to save money and in turn the environment care, providing comfort and quiet when we are inside or outside the house, increase our security, assistant and facilitate the organization of our daily activities, making new work from home, etc.</p>
+          </div>
+          <div class="col-xs-4">
+              <div class="row">
+                <div id="contact" class="contact-automation col-xs-12"></div>
+              </div>
+          </div>
+      </div>
     </div>
     <footer id="footer" class="footer"></footer>
 
@@ -58,6 +75,7 @@
     
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="scripts/translations.js"></script>
     <!-- endbuild -->
   </body>
 </html>
