--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
     <div class="container">
       <h1>Gadget Technology</h1>
       <div class="row">
-        <div class="col-xs-12">Ofrecemos soluciones, servicios y productos de tecnología a través de una ingeniosa organización adaptable a las necesidades de su empresa, negocio, hogar o espacio, con la capacidad de proveerle lo más novedoso y práctico en cualquiera de las siguientes áreas:</div>
+        <div class="col-xs-12"><span id="home-description">We offer solutions, services and technology products, through an ingenious organization adaptive to the needs of your company, business, home or space, with the ability to provide the most innovative and practical in any of the following areas:</span></div>
       </div>
         <hr>
       <div class="row">
