contenido con estilos generales

--- a/app/audio-and-video.html
+++ b/app/audio-and-video.html
@@ -31,7 +31,9 @@
     <div id="carousel" class="carousel-audio"></div>
     
     <div class="container">
-      <h1>Audio &amp; Video</h1>
+      <div class="row main-title">
+        <h1>Audio &amp; Video</h1>
+      </div>
       <div class="row">
         <div class="col-xs-12">
               <p id="audio-desc-p1">We are professionals in the installation of audio and video, as well as projectors and home theater, whether residential, commercial or for your company.</p>
