--- a/app/index.html
+++ b/app/index.html
@@ -34,26 +34,25 @@
 
     <div class="container">
       <h1>Gadget Technology</h1>
-      <div class="row">
-        <div class="col-xs-12"><span id="home-description">We offer solutions, services and technology products, through an ingenious organization adaptive to the needs of your company, business, home or space, with the ability to provide the most innovative and practical in any of the following areas:</span></div>
+      <div class="row main-title">
+          <p id="home-description">We offer solutions, services and technology products, through an ingenious organization adaptive to the needs of your company, business, home or space, with the ability to provide the most innovative and practical in any of the following areas:</p>
       </div>
-        <hr>
       <div class="row">
         <div class="col-xs-12">
           <div class="section">
-            <h5>IT Services &amp; Support</h5>
+            <h4>IT Services &amp; Support</h4>
           </div>
           <div class="section">
-            <h5>Networking</h5>
+            <h4>Networking</h4>
           </div>
           <div class="section">
-            <h5>Surveillance Cameras</h5>
+            <h4>Surveillance Cameras</h4>
           </div>
           <div class="section">
-            <h5>Audio &amp; Video</h5>
+            <h4>Audio &amp; Video</h4>
           </div>
           <div class="section">
-            <h5>Automation</h5>
+            <h4>Automation</h4>
           </div>
         </div>
       </div>
