--- a/app/networking.html
+++ b/app/networking.html
@@ -30,7 +30,9 @@
     <div id="header"></div>
     <div id="carousel" class="carousel-networking"></div>
     <div class="container">
-      <h1>Networking</h1>
+      <div class="row main-title">
+        <h1>Networking</h1>
+      </div>
       <div class="row">
           <p id="networking-desc">Among our main solutions we offer analysis, logistics and implementation of Local Area Networks (LAN), wireless networks (Wireless) and the infrastructure to configure Virtual Private Networks (VPN) in businesses and homes. We install all types of networks, Wired (UTP, fiber) or wireless (WI-FI).</p>
       </div>
