iconos de index y cabecera. Imagenes de contenidos

--- a/app/index.html
+++ b/app/index.html
@@ -40,19 +40,34 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section">
-            <h4>IT Services &amp; Support</h4>
+            <a href="/it-services-and-support.html">
+              <h4>IT Services &amp; Support</h4>
+              <div class="col-xs-12 index-icon it-icon"></div>
+            </a>
           </div>
           <div class="section">
-            <h4>Networking</h4>
+            <a href="/networking.html">
+              <h4>Networking</h4>
+              <div class="col-xs-12 index-icon networking-icon"></div>
+            </a>
           </div>
           <div class="section">
-            <h4>Surveillance Cameras</h4>
+            <a href="/surveillance-cameras.html">
+              <h4>Surveillance Cameras</h4>
+              <div class="col-xs-12 index-icon surveillance-icon"></div>
+            </a>
           </div>
           <div class="section">
-            <h4>Audio &amp; Video</h4>
+            <a href="/audio-and-video.html">
+              <h4>Audio &amp; Video</h4>
+              <div class="col-xs-12 index-icon audio-icon"></div>
+            </a>
           </div>
           <div class="section">
-            <h4>Automation</h4>
+            <a href="/automation.html">
+              <h4>Automation</h4>
+              <div class="col-xs-12 index-icon automation-icon"></div>
+            </a>
           </div>
         </div>
       </div>
