--- a/app/audio-and-video.html
+++ b/app/audio-and-video.html
@@ -34,6 +34,7 @@
     <div class="container">
       <div class="row main-title">
         <h1>Audio &amp; Video</h1>
+        <div class="col-xs-offset-5 col-xs-2 index-icon audio-icon"></div>
       </div>
       <div class="row">
         <div class="col-xs-12">
