--- a/app/automation.html
+++ b/app/automation.html
@@ -33,6 +33,7 @@
     <div class="container">
       <div class="row main-title">
         <h1>Automation</h1>
+        <div class="col-xs-offset-5 col-xs-2 index-icon automation-icon"></div>
       </div>
       <div class="row">
           <p id="automation-desc-p1">We develop, distribute, install and integrate products and services focused on smart homes, office automation, shops, office buildings, hotels, hospitals, etc. Automatic adjustment of lighting scenes, temperature (for floor, spaces and pools) and water levels (tanks, swimming pools, spas) from your smartphone and / or device of choice.</p>
