--- a/app/it-services-and-support.html
+++ b/app/it-services-and-support.html
@@ -33,6 +33,7 @@
     <div class="container">
       <div class="row main-title">
         <h1>IT Service &amp; Support</h1>
+        <div class="col-xs-offset-5 col-xs-2 index-icon it-icon"></div>
       </div>
       <div class="row">
         <div class="col-xs-4">
