--- a/app/surveillance-cameras.html
+++ b/app/surveillance-cameras.html
@@ -33,6 +33,7 @@
     <div class="container">
       <div class="row main-title">
         <h1>Surveillance Cameras</h1>
+        <div class="col-xs-offset-5 col-xs-2 index-icon surveillance-icon"></div>
       </div>
       <div class="row">
           <p id="surveillance-desc">Installation, configuration and support in systems security cameras. We have all types of analog cameras, IP or Wi-Fi, as well as recording equipment DVR or NVR.</p>
