--- a/app/networking.html
+++ b/app/networking.html
@@ -32,11 +32,11 @@
     <div class="container">
       <div id="carousel" class="carousel-networking"></div>
       <div class="row main-title">
-        <h1>Networking</h1>
+        <h1><span class="networking-title"></span></h1>
         <div class="col-xs-offset-5 col-xs-2 index-icon networking-icon"></div>
       </div>
       <div class="row">
-          <p id="networking-desc">Among our main solutions we offer analysis, logistics and implementation of Local Area Networks (LAN), wireless networks (Wireless) and the infrastructure to configure Virtual Private Networks (VPN) in businesses and homes. We install all types of networks, Wired (UTP, fiber) or wireless (WI-FI).</p>
+          <p class="networking-desc">Among our main solutions we offer analysis, logistics and implementation of Local Area Networks (LAN), wireless networks (Wireless) and the infrastructure to configure Virtual Private Networks (VPN) in businesses and homes. We install all types of networks, Wired (UTP, fiber) or wireless (WI-FI).</p>
       </div>
       <div class="row">
           <div class="col-xs-7 network-brands">
