--- a/app/audio-and-video.html
+++ b/app/audio-and-video.html
@@ -33,25 +33,25 @@
     <div class="container">
       <div id="carousel" class="carousel-audio"></div>
       <div class="row main-title">
-        <h1>Audio &amp; Video</h1>
+        <h1><span class="audio-title"></span></h1>
         <div class="col-xs-offset-5 col-xs-2 index-icon audio-icon"></div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-              <p id="audio-desc-p1">We are professionals in the installation of audio and video, as well as projectors and home theater, whether residential, commercial or for your company.</p>
+              <p class="audio-desc-p1">We are professionals in the installation of audio and video, as well as projectors and home theater, whether residential, commercial or for your company.</p>
         </div>
       </div>
       <div class="row">
           <div class="col-xs-4">
-              <p id="audio-desc-p2">Our staff is trained to give the best service and technical support staff, providing the best alternative location for its audio and optimizing them, so help you improve the sound quality of your home theater and its amplifiers through a calibration and change of high-end cables.</p>
+              <p class="audio-desc-p2">Our staff is trained to give the best service and technical support staff, providing the best alternative location for its audio and optimizing them, so help you improve the sound quality of your home theater and its amplifiers through a calibration and change of high-end cables.</p>
           </div>
           <div class="col-xs-4">
-              <p id="audio-desc-p3">We sell and install a wide variety of products in the sectors of electronics, acoustic systems and automation. Speakers, amplifiers, pre-amplifiers, CD and DVD players, tuners, surround receivers, Blu-Ray players, projectors, screens, plasmas, LCDs and cables for Home Theater and commercial facilities.</p>
+              <p class="audio-desc-p3">We sell and install a wide variety of products in the sectors of electronics, acoustic systems and automation. Speakers, amplifiers, pre-amplifiers, CD and DVD players, tuners, surround receivers, Blu-Ray players, projectors, screens, plasmas, LCDs and cables for Home Theater and commercial facilities.</p>
           </div>
           <div class="col-xs-4 audio-video-for">
-            <p><b id="audio-desc-tb1">For homes:</b> <span id="audio-desc-tb1-text">Home Theater, media room, etc.</span></p>
-            <p><b id="audio-desc-tb2">Business:</b> <span id="audio-desc-tb2-text">Conference room, etc.</span></p>
-            <p><b id="audio-desc-tb3">To shops:</b> <span id="audio-desc-tb3-text">Sport Bar, Commercial premises, etc.</span></p>
+            <p><b class="audio-desc-tb1">For homes:</b> <span class="audio-desc-tb1-text">Home Theater, media room, etc.</span></p>
+            <p><b class="audio-desc-tb2">Business:</b> <span class="audio-desc-tb2-text">Conference room, etc.</span></p>
+            <p><b class="audio-desc-tb3">To shops:</b> <span class="audio-desc-tb3-text">Sport Bar, Commercial premises, etc.</span></p>
           </div>
       </div>
       <div class="row">
