--- a/app/it-services-and-support.html
+++ b/app/it-services-and-support.html
@@ -32,29 +32,29 @@
     <div class="container">
       <div id="carousel" class="carousel-it"></div>
       <div class="row main-title">
-        <h1>IT Service &amp; Support</h1>
+        <h1><span class="it-services-title"></span></h1>
         <div class="col-xs-offset-5 col-xs-2 index-icon it-icon"></div>
       </div>
       <div class="row">
         <div class="col-xs-4">
             <h2>Service Desk</h2>
-            <p id="it-service-desk-description">Technology Services are continuously evolving and Service Desk is the practice that sets the standard in this regard. The most competitive companies in the domestic and international markets have chosen for its adaptability, versatility and the ability to manage and offered to settle potential impact of comprehensive, planned and methodical way. Its features are:</p>
+            <p class="it-service-desk-description">Technology Services are continuously evolving and Service Desk is the practice that sets the standard in this regard. The most competitive companies in the domestic and international markets have chosen for its adaptability, versatility and the ability to manage and offered to settle potential impact of comprehensive, planned and methodical way. Its features are:</p>
             <ul>
-              <li id="it-service-desk-b1">Establishment of a single point of contact, real or virtual</li>
-              <li id="it-service-desk-b2">Home Management Service Level</li>
-              <li id="it-service-desk-b3">Using multiple access channels</li>
-              <li id="it-service-desk-b4">Emphasis on track</li>
-              <li id="it-service-desk-b5">Reporting and monitoring activities</li>
-              <li id="it-service-desk-b6">Integration of the different areas of IT</li>
-              <li id="it-service-desk-b7">Philosophy of continuous improvement</li>
-              <li id="it-service-desk-b8">Proactive response</li>
-              <li id="it-service-desk-b9">The customer gets what demand.</li>
+              <li class="it-service-desk-b1">Establishment of a single point of contact, real or virtual</li>
+              <li class="it-service-desk-b2">Home Management Service Level</li>
+              <li class="it-service-desk-b3">Using multiple access channels</li>
+              <li class="it-service-desk-b4">Emphasis on track</li>
+              <li class="it-service-desk-b5">Reporting and monitoring activities</li>
+              <li class="it-service-desk-b6">Integration of the different areas of IT</li>
+              <li class="it-service-desk-b7">Philosophy of continuous improvement</li>
+              <li class="it-service-desk-b8">Proactive response</li>
+              <li class="it-service-desk-b9">The customer gets what demand.</li>
             </ul>
         </div>
         <div class="col-xs-4"></div>
         <div class="col-xs-4">
             <h2>Outsourcing</h2>
-            <p id="it-service-outsourcing-desc">If your company or organization does not have personnel dedicated IT support, we can act as your department for this area. We offer our outsourcing solution adapted to your needs plans. Gadget Technology provides everything from installation and maintenance of servers and workstations, to management of wired and wireless networks.</p>
+            <p class="it-service-outsourcing-desc">If your company or organization does not have personnel dedicated IT support, we can act as your department for this area. We offer our outsourcing solution adapted to your needs plans. Gadget Technology provides everything from installation and maintenance of servers and workstations, to management of wired and wireless networks.</p>
             <div class="row">
               <div id="contact" class="contact-it col-xs-12"></div>
             </div>
