--- a/app/surveillance-cameras.html
+++ b/app/surveillance-cameras.html
@@ -32,47 +32,47 @@
     <div class="container">
       <div id="carousel" class="carousel-surveillance"></div>
       <div class="row main-title">
-        <h1>Surveillance Cameras</h1>
+        <h1><span class="surveillance-title"></span></h1>
         <div class="col-xs-offset-5 col-xs-2 index-icon surveillance-icon"></div>
       </div>
       <div class="row">
-          <p id="surveillance-desc">Installation, configuration and support in systems security cameras. We have all types of analog cameras, IP or Wi-Fi, as well as recording equipment DVR or NVR.</p>
+          <p class="surveillance-desc">Installation, configuration and support in systems security cameras. We have all types of analog cameras, IP or Wi-Fi, as well as recording equipment DVR or NVR.</p>
       </div>
       <div class="row">
           <div class="col-xs-4">
-              <h2 id="surveillance-t1">Interior Cameras</h2>
-              <p id="surveillance-t1-desc">The simplest cameras that we can find are the interior. They do not need a waterproof case or night vision since there is usually permanent lighting during the hours that monitoring is needed.</p>
+              <h2 class="surveillance-t1">Interior Cameras</h2>
+              <p class="surveillance-t1-desc">The simplest cameras that we can find are the interior. They do not need a waterproof case or night vision since there is usually permanent lighting during the hours that monitoring is needed.</p>
               <img src="img/camara-seguridad-Interior.png" alt="Interior Camera" class="col-xs-12">
           </div>
           <div class="col-xs-4">
-              <h2 id="surveillance-t3">Vandal Proof Cameras</h2>
-              <p id="surveillance-t3-desc">The much-traveled public areas and local especially vulnerable to robbery and assault are places indicated for use in vandal proof cameras. These cameras are mounted with a shock resistant casing and remain fixed to continue recording everything that happens. They are perfect for parking lots, stores, discos, bars and outdoor shops.</p>
+              <h2 class="surveillance-t3">Vandal Proof Cameras</h2>
+              <p class="surveillance-t3-desc">The much-traveled public areas and local especially vulnerable to robbery and assault are places indicated for use in vandal proof cameras. These cameras are mounted with a shock resistant casing and remain fixed to continue recording everything that happens. They are perfect for parking lots, stores, discos, bars and outdoor shops.</p>
               <img src="img/domo-antivandalico.png" alt="Vandal Proof Cameras" class="col-xs-offset-2 col-xs-8">
           </div>
           <div class="col-xs-4">
-              <h2 id="surveillance-t5">Cameras with Zoom and movement (PTZ)</h2>
-              <p id="surveillance-t5-desc">These cameras are ideal for installations of CCTV (Closed Circuit Television) having one person monitoring, or for large areas that are monitored following a motion path.</p>
+              <h2 class="surveillance-t5">Cameras with Zoom and movement (PTZ)</h2>
+              <p class="surveillance-t5-desc">These cameras are ideal for installations of CCTV (Closed Circuit Television) having one person monitoring, or for large areas that are monitored following a motion path.</p>
               <img src="img/AutoDome_PTZ.png" alt="Cameras PTZ" class="col-xs-10 col-xs-offset-1">
           </div>
       </div>
       <div class="row">
           <div class="col-xs-4">
-              <h2 id="surveillance-t2">Infrared Cameras</h2>
-              <p id="surveillance-t2-desc">If they are to be placed in a location with poor lighting or surveillance is needed 24 hours, the best option is with night vision cameras. These cameras record full color during the day and in low light conditions, automatically turn on their infrared to continue recording in black and white.</p>
+              <h2 class="surveillance-t2">Infrared Cameras</h2>
+              <p class="surveillance-t2-desc">If they are to be placed in a location with poor lighting or surveillance is needed 24 hours, the best option is with night vision cameras. These cameras record full color during the day and in low light conditions, automatically turn on their infrared to continue recording in black and white.</p>
               <img src="img/Camara-Infrarroja.png" alt="Infrared Cameras" class="col-xs-12">
               <div class="col-xs-12"><br><br><br><br>&nbsp;</div>
               <img src="img/Consola-Cctv.png" alt="CCTV Console" class="col-xs-12">
           </div>
           <div class="col-xs-4">
-              <h2 id="surveillance-t4">IP Cameras</h2>
-              <p id="surveillance-t4-desc">IP cameras are complete systems that connect directly to the Internet and display the image of where it is placed. With an IP camera you can use your phone to see your home from anywhere in the world, without additional equipment.</p>
+              <h2 class="surveillance-t4">IP Cameras</h2>
+              <p class="surveillance-t4-desc">IP cameras are complete systems that connect directly to the Internet and display the image of where it is placed. With an IP camera you can use your phone to see your home from anywhere in the world, without additional equipment.</p>
               <img src="img/IP-391W-HD.png" alt="IP Cameras" class="col-xs-offset-2 col-xs-8">
               <div class="col-xs-12"><br>&nbsp;</div>
               <img src="img/CCTV_celulares_tablets.png" alt="CCTV Smartphones Tablets" class="col-xs-12">
           </div>
           <div class="col-xs-4">
-              <h2 id="surveillance-t6">Hidden Cameras</h2>
-              <p id="surveillance-t6-desc">If you need complete discretion to monitor somewhere in your home or business, we recommend spy cameras. These are placed within an object (smoke detectors, motion sensors, mirrors, screws, plugs, etc.) and go unnoticed to all persons traveling in front of them.</p>
+              <h2 class="surveillance-t6">Hidden Cameras</h2>
+              <p class="surveillance-t6-desc">If you need complete discretion to monitor somewhere in your home or business, we recommend spy cameras. These are placed within an object (smoke detectors, motion sensors, mirrors, screws, plugs, etc.) and go unnoticed to all persons traveling in front of them.</p>
               <div class="row">
                 <div id="contact" class="contact-surveillance col-xs-12"></div>
               </div>
