working on it services

--- a/app/it-services-and-support.html
+++ b/app/it-services-and-support.html
@@ -51,7 +51,12 @@
               <li class="it-service-desk-b9">The customer gets what demand.</li>
             </ul>
         </div>
-        <div class="col-xs-4"></div>
+        <div class="col-xs-4">
+          <div class="row">
+            <img src="img/help.png" class="it-services-help" alt="Help">
+            <img src="img/helpDesk.png" class="it-services-help-desk" alt="Help Desk">
+          </div>
+        </div>
         <div class="col-xs-4">
             <h2>Outsourcing</h2>
             <p class="it-service-outsourcing-desc">If your company or organization does not have personnel dedicated IT support, we can act as your department for this area. We offer our outsourcing solution adapted to your needs plans. Gadget Technology provides everything from installation and maintenance of servers and workstations, to management of wired and wireless networks.</p>
