--- a/app/it-services-and-support.html
+++ b/app/it-services-and-support.html
@@ -52,9 +52,16 @@
             </ul>
         </div>
         <div class="col-xs-4">
-          <div class="row">
-            <img src="img/help.png" class="it-services-help" alt="Help">
-            <img src="img/helpDesk.png" class="it-services-help-desk" alt="Help Desk">
+          <div class="container-fluid">
+            <div class="row">
+              <h2>&nbsp;</h2>
+              <div class="col-xs-12 text-center">
+                <img src="img/help.png" class="it-services-help" alt="Help">
+              </div>
+              <div class="col-xs-12">
+                <img src="img/helpDesk.png" class="it-services-help-desk" alt="Help Desk">
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-xs-4">
