--- a/app/it-services-and-support.html
+++ b/app/it-services-and-support.html
@@ -58,6 +58,8 @@
               <div class="col-xs-12 text-center">
                 <img src="img/help.png" class="it-services-help" alt="Help">
               </div>
+              <p>&nbsp;</p>
+              <br>
               <div class="col-xs-12">
                 <img src="img/helpDesk.png" class="it-services-help-desk" alt="Help Desk">
               </div>
