--- a/app/surveillance-cameras.html
+++ b/app/surveillance-cameras.html
@@ -60,22 +60,29 @@
               <h2 class="surveillance-t2">Infrared Cameras</h2>
               <p class="surveillance-t2-desc">If they are to be placed in a location with poor lighting or surveillance is needed 24 hours, the best option is with night vision cameras. These cameras record full color during the day and in low light conditions, automatically turn on their infrared to continue recording in black and white.</p>
               <img src="img/Camara-Infrarroja.png" alt="Infrared Cameras" class="col-xs-12">
-              <div class="col-xs-12"><br><br><br><br>&nbsp;</div>
-              <img src="img/Consola-Cctv.png" alt="CCTV Console" class="col-xs-12">
           </div>
           <div class="col-xs-4">
               <h2 class="surveillance-t4">IP Cameras</h2>
               <p class="surveillance-t4-desc">IP cameras are complete systems that connect directly to the Internet and display the image of where it is placed. With an IP camera you can use your phone to see your home from anywhere in the world, without additional equipment.</p>
               <img src="img/IP-391W-HD.png" alt="IP Cameras" class="col-xs-offset-2 col-xs-8">
               <div class="col-xs-12"><br>&nbsp;</div>
-              <img src="img/CCTV_celulares_tablets.png" alt="CCTV Smartphones Tablets" class="col-xs-12">
           </div>
           <div class="col-xs-4">
               <h2 class="surveillance-t6">Hidden Cameras</h2>
               <p class="surveillance-t6-desc">If you need complete discretion to monitor somewhere in your home or business, we recommend spy cameras. These are placed within an object (smoke detectors, motion sensors, mirrors, screws, plugs, etc.) and go unnoticed to all persons traveling in front of them.</p>
-              <div class="row">
-                <div id="contact" class="contact-surveillance col-xs-12"></div>
-              </div>
+          </div>
+          <div class="clearfix"></div>
+          <div class="col-xs-4">
+            <h2 class="surveillance-t7">Remote monitoring</h2>
+            <p class="surveillance-t7-desc">We offer the best systems to keep "view" the security of your business, home or company, from anywhere you are.</p>
+            <br>&nbsp;<br>
+            <img src="img/Consola-Cctv.png" alt="CCTV Console" class="col-xs-12">
+          </div>
+          <div class="col-xs-4">
+            <img src="img/CCTV_celulares_tablets.png" alt="CCTV Smartphones Tablets" class="col-xs-12">
+          </div>
+          <div class="col-xs-4 pull-right">
+            <div id="contact" class="contact-surveillance col-xs-12"></div>
           </div>
       </div>
     </div>
