centrando un texto de audio y video

--- a/app/audio-and-video.html
+++ b/app/audio-and-video.html
@@ -38,7 +38,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-              <p class="audio-desc-p1">We are professionals in the installation of audio and video, as well as projectors and home theater, whether residential, commercial or for your company.</p>
+              <p class="audio-desc-p1 text-center">We are professionals in the installation of audio and video, as well as projectors and home theater, whether residential, commercial or for your company.</p>
         </div>
       </div>
       <div class="row">
