audio and video

--- a/app/audio-and-video.html
+++ b/app/audio-and-video.html
@@ -57,18 +57,41 @@
       <div class="row">
           <div class="col-xs-8">
             <div class="row">
-                <div class="col-xs-6"></div>
-                <div class="col-xs-6"></div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12"></div>
+                <div class="col-xs-12">
+                  <img src="img/audio_composite.png" alt="..." class="img-full">
+                </div>
             </div>
           </div>
           <div class="col-xs-4">
-              <div class="row">
-                <div id="contact" class="contact-audio col-xs-12"></div>
-              </div>
+            <img src="img/audio_home.png" alt="Audio Home">
           </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-7 audio-brands">
+          <div class="row">
+            <div class="col-xs-4">
+              <img src="img/audio_brands/bose.png" alt="bose" class="">
+            </div>
+            <div class="col-xs-4">
+              <img src="img/audio_brands/sony.png" alt="sony" class="">
+            </div>
+            <div class="col-xs-4">
+              <img src="img/audio_brands/pioneer.png" alt="pioneer" class="">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-4">
+              <img src="img/audio_brands/polk.png" alt="polk" class="">
+            </div>
+            <div class="col-xs-4">
+              <img src="img/audio_brands/onkyo.png" alt="onkyo" class="">
+            </div>
+            <div class="col-xs-4">
+              <img src="img/audio_brands/proficient.png" alt="proficient" class="">
+            </div>
+          </div>
+        </div>        
+        <div id="contact" class="contact-audio col-xs-4 col-xs-offset-1"></div>
       </div>
     </div>
     <footer id="footer" class="footer"></footer>
