--- a/app/it-services-and-support.html
+++ b/app/it-services-and-support.html
@@ -56,12 +56,12 @@
             <div class="row">
               <h2>&nbsp;</h2>
               <div class="col-xs-12 text-center">
-                <img src="img/help.png" class="it-services-help" alt="Help">
+                <img src="img/help.png" class="img-full" alt="Help">
               </div>
               <p>&nbsp;</p>
               <br>
               <div class="col-xs-12">
-                <img src="img/helpDesk.png" class="it-services-help-desk" alt="Help Desk">
+                <img src="img/helpDesk.png" class="img-full" alt="Help Desk">
               </div>
             </div>
           </div>
