--- a/app/networking.html
+++ b/app/networking.html
@@ -41,9 +41,18 @@
       <div class="row">
           <div class="col-xs-7 network-brands">
             <div class="row">
-              <div class="col-xs-4"><span class="helper"></span><img src="/img/Network Brands/2000px-Cisco_logo.png" alt="Cisco Logo"></div>
-              <div class="col-xs-4"><span class="helper"></span><img src="/img/Network Brands/wi-fi logo.png" alt="Wi-Fi Logo"></div>
-              <div class="col-xs-4"><span class="helper"></span><img src="/img/Network Brands/D-LINK.png" alt="D-LINK Logo"></div>
+              <div class="col-xs-4">
+                <span class="helper"></span>
+                <img src="/img/Network Brands/2000px-Cisco_logo.png" alt="Cisco Logo">
+              </div>
+              <div class="col-xs-4">
+                <span class="helper"></span>
+                <img src="/img/Network Brands/wi-fi logo.png" alt="Wi-Fi Logo">
+              </div>
+              <div class="col-xs-4">
+                <span class="helper"></span>
+                <img src="/img/Network Brands/D-LINK.png" alt="D-LINK Logo">
+              </div>
             </div>
             <div class="row">
               <div class="col-xs-4"><img src="/img/Network Brands/Linksys__Present_Logo_.png" alt="Linksys Logo"></div>
