--- a/app/surveillance-cameras.html
+++ b/app/surveillance-cameras.html
@@ -71,7 +71,9 @@
               <h2 class="surveillance-t6">Hidden Cameras</h2>
               <p class="surveillance-t6-desc">If you need complete discretion to monitor somewhere in your home or business, we recommend spy cameras. These are placed within an object (smoke detectors, motion sensors, mirrors, screws, plugs, etc.) and go unnoticed to all persons traveling in front of them.</p>
           </div>
-          <div class="clearfix"></div>
+      </div>
+      <br><br>
+      <div class="row">
           <div class="col-xs-4">
             <h2 class="surveillance-t7">Remote monitoring</h2>
             <p class="surveillance-t7-desc">We offer the best systems to keep "view" the security of your business, home or company, from anywhere you are.</p>
@@ -79,11 +81,11 @@
             <img src="img/Consola-Cctv.png" alt="CCTV Console" class="col-xs-12">
           </div>
           <div class="col-xs-4">
-            <img src="img/CCTV_celulares_tablets.png" alt="CCTV Smartphones Tablets" class="col-xs-12">
+            <div class="surveillance-helper">
+              <img src="img/CCTV_celulares_tablets.png" alt="CCTV Smartphones Tablets" class="img-full">
+            </div>
           </div>
-          <div class="col-xs-4 pull-right">
-            <div id="contact" class="contact-surveillance col-xs-12"></div>
-          </div>
+          <div id="contact" class="contact-surveillance col-xs-4"></div>
       </div>
     </div>
     <footer id="footer" class="footer"></footer>
