--- a/app/audio-and-video.html
+++ b/app/audio-and-video.html
@@ -49,9 +49,9 @@
               <p class="audio-desc-p3">We sell and install a wide variety of products in the sectors of electronics, acoustic systems and automation. Speakers, amplifiers, pre-amplifiers, CD and DVD players, tuners, surround receivers, Blu-Ray players, projectors, screens, plasmas, LCDs and cables for Home Theater and commercial facilities.</p>
           </div>
           <div class="col-xs-4 audio-video-for">
-            <p><b class="audio-desc-tb1">For homes:</b> <span class="audio-desc-tb1-text">Home Theater, media room, etc.</span></p>
-            <p><b class="audio-desc-tb2">Business:</b> <span class="audio-desc-tb2-text">Conference room, etc.</span></p>
-            <p><b class="audio-desc-tb3">To shops:</b> <span class="audio-desc-tb3-text">Sport Bar, Commercial premises, etc.</span></p>
+            <p><b class="audio-desc-tb1">For homes:</b> <span class="audio-desc-tb1-text">Home Theater, media room, etc.</span></p><br>
+            <p><b class="audio-desc-tb2">Business:</b> <span class="audio-desc-tb2-text">Conference room, etc.</span></p><br>
+            <p><b class="audio-desc-tb3">To shops:</b> <span class="audio-desc-tb3-text">Sport Bar, Commercial premises, etc.</span></p><br>
           </div>
       </div>
       <div class="row">
@@ -69,24 +69,24 @@
       <div class="row">
         <div class="col-xs-7 audio-brands">
           <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-4 text-center">
               <img src="img/audio_brands/bose.png" alt="bose" class="">
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-4 text-center">
               <img src="img/audio_brands/sony.png" alt="sony" class="">
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-4 text-center">
               <img src="img/audio_brands/pioneer.png" alt="pioneer" class="">
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-4 text-center">
               <img src="img/audio_brands/polk.png" alt="polk" class="">
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-4 text-center">
               <img src="img/audio_brands/onkyo.png" alt="onkyo" class="">
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-4 text-center">
               <img src="img/audio_brands/proficient.png" alt="proficient" class="">
             </div>
           </div>
