--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
       <div id="carousel"></div>
       <h1>Gadget Technology</h1>
       <div class="row main-title">
-          <p class="home-description">We offer solutions, services and technology products, through an ingenious organization adaptive to the needs of your company, business, home or space, with the ability to provide the most innovative and practical in any of the following areas:</p>
+          <p class="home-description text-center">We offer solutions, services and technology products, through an ingenious organization adaptive to the needs of your company, business, home or space, with the ability to provide the most innovative and practical in any of the following areas:</p>
       </div>
       <div class="row">
         <div class="col-xs-12">
