--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,11 @@
 
     <div class="container">
       <div id="carousel"></div>
-      <h1>Gadget Technology</h1>
+      <div class="col-xs-12">
+        <div class="col-xs-4 col-xs-offset-4">
+          <img src="img/logo_texto.png" alt="Gadget Technology" class="img-full">
+        </div>
+      </div>
       <div class="row main-title">
           <p class="home-description text-center">We offer solutions, services and technology products, through an ingenious organization adaptive to the needs of your company, business, home or space, with the ability to provide the most innovative and practical in any of the following areas:</p>
       </div>
