--- a/app/audio-and-video.html
+++ b/app/audio-and-video.html
@@ -57,7 +57,7 @@
       <div class="row">
           <div class="col-xs-8">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 audio-helper">
                   <img src="img/audio_composite.png" alt="..." class="img-full">
                 </div>
             </div>
@@ -67,7 +67,7 @@
           </div>
       </div>
       <div class="row">
-        <div class="col-xs-7 audio-brands">
+        <div class="col-xs-8 audio-brands">
           <div class="row">
             <div class="col-xs-4 text-center">
               <img src="img/audio_brands/bose.png" alt="bose" class="">
@@ -91,7 +91,7 @@
             </div>
           </div>
         </div>        
-        <div id="contact" class="contact-audio col-xs-4 col-xs-offset-1"></div>
+        <div id="contact" class="contact-audio col-xs-4"></div>
       </div>
     </div>
     <footer id="footer" class="footer"></footer>
