refactor de los iconos en el home

--- a/app/index.html
+++ b/app/index.html
@@ -53,32 +53,46 @@
             <div class="section">
               <a href="/it-services-and-support.html">
                 <h3><span class="it-services-title"></span></h3>
-                <div class="col-xs-12 index-icon it-icon"></div>
               </a>
             </div>
             <div class="section">
               <a href="/networking.html">
                 <h3><span class="networking-title"></span></h3>
-                <div class="col-xs-12 index-icon networking-icon"></div>
               </a>
             </div>
             <div class="section">
               <a href="/surveillance-cameras.html">
                 <h3><span class="surveillance-title"></span></h3>
-                <div class="col-xs-12 index-icon surveillance-icon"></div>
               </a>
             </div>
             <div class="section">
               <a href="/audio-and-video.html">
                 <h3><span class="audio-title"></span></h3>
-                <div class="col-xs-12 index-icon audio-icon"></div>
               </a>
             </div>
             <div class="section">
               <a href="/automation.html">
                 <h3><span class="automation-title"></span></h3>
-                <div class="col-xs-12 index-icon automation-icon"></div>
               </a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="section">
+              <div class="col-xs-12 index-icon it-icon"></div>
+            </div>
+            <div class="section">
+              <div class="col-xs-12 index-icon networking-icon"></div>
+            </div>
+            <div class="section">
+              <div class="col-xs-12 index-icon surveillance-icon"></div>
+            </div>
+            <div class="section">
+              <div class="col-xs-12 index-icon audio-icon"></div>
+            </div>
+            <div class="section">
+              <div class="col-xs-12 index-icon automation-icon"></div>
             </div>
           </div>
         </div>
