working in the gulpfile

--- a/app/index.html
+++ b/app/index.html
@@ -7,21 +7,14 @@
   <title>gadget_tech</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
   <!-- Place favicon.ico in the root directory -->
 
-  <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <!-- endbower -->
-  <!-- endbuild -->
 
-  <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="styles/index.css">
-  <link rel="stylesheet" href="styles/header.css">
-  <link rel="stylesheet" href="styles/contact.css">
-  <link rel="stylesheet" href="styles/footer.css">
-  <!-- endbuild -->
+  <!-- inject:css -->
+  <!-- endinject -->
 
 </head>
 
@@ -108,11 +101,8 @@
 
 
 
-  <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
-  <script src="/bower_components/jquery/dist/jquery.js"></script>
   <!-- endbower -->
-  <!-- endbuild -->
 
   <!-- build:js scripts/plugins.js -->
   <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
@@ -129,10 +119,8 @@
   <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
   <!-- endbuild -->
 
-  <!-- build:js scripts/main.js -->
-  <script src="scripts/main.js"></script>
-  <script src="scripts/translations.js"></script>
-  <!-- endbuild -->
+  <!-- inject:js -->
+  <!-- endinject -->
 </body>
 
 </html>
