--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
   <div id="header"></div>
   <div id="carousel"></div> 
-  <div class="container">
+  <div id="main-content" class="container">
     <div class="row">
       <div class="col-xs-10 col-xs-offset-1">
         <div class="row">
