--- a/app/content/home.html
+++ b/app/content/home.html
@@ -16,27 +16,27 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="section">
-          <a href="/it-services-and-support.html">
+          <a href="#" class="menu-link item-it-services">
             <h3><span class="it-services-title"></span></h3>
           </a>
         </div>
         <div class="section">
-          <a href="/networking.html">
+          <a href="#" class="menu-link item-networking">
             <h3><span class="networking-title"></span></h3>
           </a>
         </div>
         <div class="section">
-          <a href="/surveillance-cameras.html">
+          <a href="#" class="menu-link item-surveillance">
             <h3><span class="surveillance-title"></span></h3>
           </a>
         </div>
         <div class="section">
-          <a href="/audio-and-video.html">
+          <a href="#" class="menu-link item-audio">
             <h3><span class="audio-title"></span></h3>
           </a>
         </div>
         <div class="section">
-          <a href="/automation.html">
+          <a href="#" class="menu-link item-automation">
             <h3><span class="automation-title"></span></h3>
           </a>
         </div>
@@ -45,19 +45,27 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="section">
-          <div class="col-xs-12 index-icon it-icon"></div>
+          <a href="#" class="menu-link item-it-services"><div class="col-xs-12 index-icon it-icon"></div></a>
         </div>
         <div class="section">
+          <a href="#" class="menu-link item-networking">
           <div class="col-xs-12 index-icon networking-icon"></div>
+          </a>
         </div>
         <div class="section">
+          <a href="#" class="menu-link item-surveillance">
           <div class="col-xs-12 index-icon surveillance-icon"></div>
+          </a>
         </div>
         <div class="section">
+          <a href="#" class="menu-link item-audio">
           <div class="col-xs-12 index-icon audio-icon"></div>
+          </a>
         </div>
         <div class="section">
+          <a href="#" class="menu-link item-automation">
           <div class="col-xs-12 index-icon automation-icon"></div>
+          </a>
         </div>
       </div>
     </div>
